Add support for openapi-core 0.16.1+
